<resources>
    <string name="title_home">Home</string>
    <string name="title_overview">OverView</string>
    <string name="title_workbench">Workbench</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name">CloudlibraryApp</string>
    <string name="check_connection">Check the network connection</string>
    <string name="system_error">System error</string>
    <string name="over_name">Name</string>
    <string name="over_email">Email</string>
    <string name="over_role">Role</string>
    <string name="action_log_out">Logout</string>
    <string name="action_historical_record">Historical borrowing</string>
    <string name="action_book_lending">Book lending</string>
    <string name="action_current_borrowing">Current borrowing</string>
    <string name="title_new_arrivals">New arrivals</string>
    <string name="title_book_name">Book name</string>
    <string name="title_book_author">Book author</string>
    <string name="title_book_status">Book status</string>
    <string name="invalid_login">Login is invalid.Please log in again</string>
    <string name="title_borrowing_in_progress">Borrowing in progress</string>
    <string name="title_available_for_borrowing">Avaliable for borrowing</string>
    <string name="action_search_query_hint">Enter the name of the book, the author or the publisher to search</string>
    <string name="action_to_borrow_book">to borrow?</string>
    <string name="action_alert_confirm">Confirm</string>
    <string name="action_alert_cancel">Cancel</string>
    <string name="action_loan_time">Hours of loan service</string>
    <string name="action_should_return_time">Should return time</string>
    <string name="title_return_in_progress">Return in progress</string>
    <string name="action_to_return_book">To return?</string>
    <string name="action_return_time">Return time</string>
    <string name="title_borrower">Borrower</string>
    <string name="title_add_new_books">Add new books</string>
    <string name="title_edit_books_information">Edit books information</string>
    <string name="title_confirm_return_books">Confirm return books</string>
    <string name="title_add_book_name">Book name</string>
    <string name="title_add_book_isbn">Standard ISBN</string>
    <string name="title_add_book_press">Press</string>
    <string name="title_add_book_author">Author</string>
    <string name="title_add_book_pagination">Book pagination</string>
    <string name="title_add_book_price">Book price</string>
    <string name="title_add_book_status">Book status</string>
    <string name="action_book_status">Putaway</string>
    <string name="action_book_status_anti">Taken off the shelves</string>
    <string name="action_save">Save</string>
</resources>