<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_marginTop="@dimen/overview_text_height"
        android:layout_marginLeft="@dimen/overview_text_height"
        android:layout_marginRight="@dimen/overview_text_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_new_books"
        android:id="@+id/add_new_books_btn"/>

    <Button
        android:layout_marginTop="@dimen/overview_text_height"
        android:layout_marginLeft="@dimen/overview_text_height"
        android:layout_marginRight="@dimen/overview_text_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_edit_books_information"
        android:id="@+id/edit_books_btn"/>

    <Button
        android:layout_marginTop="@dimen/overview_text_height"
        android:layout_marginLeft="@dimen/overview_text_height"
        android:layout_marginRight="@dimen/overview_text_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_confirm_return_books"
        android:id="@+id/confirm_return_books_btn"/>

</LinearLayout>