<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/banner2"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/other"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/action_book_lending"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/action_book_lending" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:id="@+id/action_current_borrowing"
                android:textAlignment="center"
                android:text="@string/action_current_borrowing" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:id="@+id/action_historical_borrowing"
                android:textAlignment="center"
                android:text="@string/action_historical_record" />
        </LinearLayout>








    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/banner2"
        android:id="@+id/other"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:text="@string/title_new_arrivals" />

        <include layout="@layout/include_show_books"/>


    </LinearLayout>


</RelativeLayout>